# frippa

./: Dockerfile  README.md  frippa-docker  setup.cfg  setup.py
frippa/: cli.py  formatters.py  main.py  models.py  results.py  ripp_miner.py  runners.py
frippa/data/: DUF3328.hmm  fungal_tfs.hmm
