[metadata]
name = fRiPPa
author = Cameron Gilchrist
description = fungal Ribosomally synthesized and Post-translationally modified Peptide (RiPP) assayer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gamcil/frippa
license = MIT
classifiers =
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	biopython

[options.entry_points]
console_scripts =
	frippa = frippa.main:main
